// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/users/_id/dws-projects/_projectId/edit.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object],[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <form
    class="v-form"
    data-form=""
    novalidate="novalidate"
  >
    <div>
      <z-user-summary-stub
        user="[object Object]"
      />
      <div
        class="z-form-card-stub"
        title="自治体助成情報"
      >
        <div
          class="z-form-card-stub-slot-actions"
        />
        <z-form-card-item-set-stub
          icon="M9,10H7V12H9V10M13,10H11V12H13V10M17,10H15V12H17V10M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3M19,19H5V8H19V19Z"
          label=""
        >
          <z-flex-stub>
            <div
              class="root"
              data-period-start=""
              data-z-form-card-item=""
            >
              <div
                class="z-date-field"
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          適用期間 *
                        </label>
                        <input
                          readonly="readonly"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <v-dialog-stub
                  closedelay="0"
                  contentclass=""
                  data-z-date-field-dialog=""
                  opendelay="0"
                  origin="center center"
                  retainfocus="true"
                  transition="dialog-transition"
                  width="290px"
                >
                  <v-date-picker-stub
                    data-z-date-field-picker=""
                    dayformat="[Function]"
                    eventcolor="warning"
                    firstdayofweek="1"
                    headerdateformat="[Function]"
                    locale="ja-JP"
                    localefirstdayofyear="0"
                    max="2028-05-17"
                    min="1920-01-01"
                    nexticon="$next"
                    nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                    nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                    notitle="true"
                    previcon="$prev"
                    prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                    prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                    selecteditemstext="$vuetify.datePicker.itemsSelected"
                    showcurrent="true"
                    titledateformat="[Function]"
                    type="date"
                    value="1983-05-01"
                    width="290"
                    yearformat="[Function]"
                  >
                    <v-spacer-stub
                      tag="div"
                    />
                    <a
                      class="v-btn-stub"
                      color="primary"
                      data-z-date-field-button-clear=""
                      text=""
                    >
                      クリア
                    </a>
                    <a
                      class="v-btn-stub"
                      color="primary"
                      data-z-date-field-button-cancel=""
                      text=""
                    >
                      キャンセル
                    </a>
                  </v-date-picker-stub>
                </v-dialog-stub>
              </div>
            </div>
            <z-flex-shrink-stub
              class="pb-2 pl-2 pt-4"
            >
              〜
            </z-flex-shrink-stub>
            <div
              class="root"
              data-period-end=""
              data-z-form-card-item=""
            >
              <div
                class="z-date-field"
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <input
                          readonly="readonly"
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <v-dialog-stub
                  closedelay="0"
                  contentclass=""
                  data-z-date-field-dialog=""
                  opendelay="0"
                  origin="center center"
                  retainfocus="true"
                  transition="dialog-transition"
                  width="290px"
                >
                  <v-date-picker-stub
                    data-z-date-field-picker=""
                    dayformat="[Function]"
                    eventcolor="warning"
                    firstdayofweek="1"
                    headerdateformat="[Function]"
                    locale="ja-JP"
                    localefirstdayofyear="0"
                    max="2028-05-17"
                    min="1920-01-01"
                    nexticon="$next"
                    nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
                    nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
                    notitle="true"
                    previcon="$prev"
                    prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
                    prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
                    selecteditemstext="$vuetify.datePicker.itemsSelected"
                    showcurrent="true"
                    titledateformat="[Function]"
                    type="date"
                    value="2020-07-21"
                    width="290"
                    yearformat="[Function]"
                  >
                    <v-spacer-stub
                      tag="div"
                    />
                    <a
                      class="v-btn-stub"
                      color="primary"
                      data-z-date-field-button-clear=""
                      text=""
                    >
                      クリア
                    </a>
                    <a
                      class="v-btn-stub"
                      color="primary"
                      data-z-date-field-button-cancel=""
                      text=""
                    >
                      キャンセル
                    </a>
                  </v-date-picker-stub>
                </v-dialog-stub>
              </div>
            </div>
          </z-flex-stub>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M15,23H13V21H15V23M19,21H17V23H19V21M15,17H13V19H15V17M7,21H5V23H7V21M7,17H5V19H7V17M19,17H17V19H19V17M15,13H13V15H15V13M19,13H17V15H19V13M21,9A2,2 0 0,1 23,11V23H21V11H11V23H9V15H3V23H1V15A2,2 0 0,1 3,13H9V11A2,2 0 0,1 11,9V7A2,2 0 0,1 13,5H15V1H17V5H19A2,2 0 0,1 21,7V9M19,9V7H13V9H19Z"
          label=""
        >
          <v-row-stub
            nogutters="true"
            tag="div"
          >
            <v-col-stub
              cols="12"
              sm="6"
              tag="div"
            >
              <div
                class="root"
                data-city-name=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          助成自治体名 *
                        </label>
                        <input
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
            <v-col-stub
              cols="12"
              sm="6"
              tag="div"
            >
              <div
                class="root"
                data-city-code=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      class="v-input__slot"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-text-field__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          助成自治体番号 *
                        </label>
                        <input
                          type="text"
                        />
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
          </v-row-stub>
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
          label=""
        >
          <v-row-stub
            nogutters="true"
            tag="div"
          >
            <v-col-stub
              tag="div"
            >
              <div
                class="root"
                data-subsidy-type=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      class="v-input__slot"
                      role="button"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-select__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          給付方式 *
                        </label>
                        <div
                          class="v-select__selections"
                        >
                          <div
                            class="v-select__selection v-select__selection--comma"
                          >
                            定率給付
                          </div>
                          <input
                            aria-readonly="false"
                            autocomplete="off"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-menu-down theme--light"
                            />
                          </div>
                        </div>
                        <input
                          type="hidden"
                          value="1"
                        />
                      </div>
                      <div
                        class="v-menu"
                      >
                        <!---->
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
          </v-row-stub>
          <v-row-stub
            nogutters="true"
            tag="div"
          >
            <v-col-stub
              cols="12"
              sm="5"
              tag="div"
            >
              <z-flex-stub>
                <div
                  class="root"
                  data-factor=""
                  data-z-form-card-item=""
                >
                  <div
                    class="v-input v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        class="v-input__slot"
                        role="button"
                        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-select__slot"
                        >
                          <label
                            class="v-label theme--light"
                            style="left: 0px; position: absolute;"
                          >
                            基準値 *
                          </label>
                          <div
                            class="v-select__selections"
                          >
                            <input
                              aria-readonly="false"
                              autocomplete="off"
                              readonly="readonly"
                              type="text"
                            />
                          </div>
                          <div
                            class="v-input__append-inner"
                          >
                            <div
                              class="v-input__icon v-input__icon--append"
                            >
                              <i
                                aria-hidden="true"
                                class="v-icon notranslate mdi mdi-menu-down theme--light"
                              />
                            </div>
                          </div>
                          <input
                            type="hidden"
                          />
                        </div>
                        <div
                          class="v-menu"
                        >
                          <!---->
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <z-flex-shrink-stub
                  class="pb-2 pl-2 pt-4"
                >
                  の
                </z-flex-shrink-stub>
              </z-flex-stub>
            </v-col-stub>
            <v-col-stub
              cols="12"
              sm="7"
              tag="div"
            >
              <z-flex-stub>
                <div
                  class="root"
                  data-benefit-rate=""
                  data-z-form-card-item=""
                >
                  <div
                    class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
                  >
                    <div
                      class="v-input__control"
                    >
                      <div
                        class="v-input__slot"
                        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                      >
                        <fieldset
                          aria-hidden="true"
                        >
                          <legend
                            style="width: 0px;"
                          >
                            <span
                              class="notranslate"
                            >
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <div
                          class="v-text-field__slot"
                        >
                          <label
                            class="v-label v-label--active theme--light"
                            style="left: 0px; position: absolute;"
                          >
                            給付率 *
                          </label>
                          <input
                            type="number"
                          />
                          <div
                            class="v-text-field__suffix"
                          >
                            %
                          </div>
                        </div>
                      </div>
                      <div
                        class="v-text-field__details"
                      >
                        <div
                          class="v-messages theme--light"
                        >
                          <transition-group-stub
                            class="v-messages__wrapper"
                            name="message-transition"
                            tag="div"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <z-flex-shrink-stub
                  class="pb-2 pl-2 pt-4"
                >
                  を自治体が負担する
                </z-flex-shrink-stub>
              </z-flex-stub>
            </v-col-stub>
          </v-row-stub>
          <v-row-stub
            nogutters="true"
            tag="div"
          >
            <v-col-stub
              cols="12"
              tag="div"
            >
              <div
                class="root"
                data-rounding=""
                data-z-form-card-item=""
              >
                <div
                  class="v-input v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--enclosed v-text-field--outlined v-select"
                >
                  <div
                    class="v-input__control"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      class="v-input__slot"
                      role="button"
                      style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                    >
                      <fieldset
                        aria-hidden="true"
                      >
                        <legend
                          style="width: 0px;"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                      <div
                        class="v-select__slot"
                      >
                        <label
                          class="v-label v-label--active theme--light"
                          style="left: 0px; position: absolute;"
                        >
                          端数処理 *
                        </label>
                        <div
                          class="v-select__selections"
                        >
                          <div
                            class="v-select__selection v-select__selection--comma"
                          >
                            切り上げ
                          </div>
                          <input
                            aria-readonly="false"
                            autocomplete="off"
                            readonly="readonly"
                            type="text"
                          />
                        </div>
                        <div
                          class="v-input__append-inner"
                        >
                          <div
                            class="v-input__icon v-input__icon--append"
                          >
                            <i
                              aria-hidden="true"
                              class="v-icon notranslate mdi mdi-menu-down theme--light"
                            />
                          </div>
                        </div>
                        <input
                          type="hidden"
                          value="2"
                        />
                      </div>
                      <div
                        class="v-menu"
                      >
                        <!---->
                      </div>
                    </div>
                    <div
                      class="v-text-field__details"
                    >
                      <div
                        class="v-messages theme--light"
                      >
                        <transition-group-stub
                          class="v-messages__wrapper"
                          name="message-transition"
                          tag="div"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </v-col-stub>
          </v-row-stub>
          <!---->
          <!---->
          <!---->
        </z-form-card-item-set-stub>
        <z-form-card-item-set-stub
          icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
          label=""
        >
          <div
            class="root"
            data-note=""
            data-z-form-card-item=""
          >
            <div
              class="v-input v-textarea v-textarea--auto-grow v-textarea--no-resize v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--enclosed v-text-field--outlined"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                  style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
                >
                  <fieldset
                    aria-hidden="true"
                  >
                    <legend
                      style="width: 0px;"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                  <div
                    class="v-text-field__slot"
                  >
                    <label
                      class="v-label v-label--active theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      備考
                    </label>
                    <textarea
                      rows="3"
                    />
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <transition-group-stub
                      class="v-messages__wrapper"
                      name="message-transition"
                      tag="div"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </z-form-card-item-set-stub>
        <div
          class="z-form-card-stub-slot-header"
        />
      </div>
      <z-form-action-button-stub
        icon="M14,13V17H10V13H7L12,8L17,13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
        text="保存"
      />
    </div>
  </form>
</div>
`;

exports[`pages/users/_id/dws-projects/_projectId/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "benefitAmount") 1`] = `
<div
  class="root"
  data-benefit-amount=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            給付額 *
          </label>
          <input
            type="number"
          />
          <div
            class="v-text-field__suffix"
          >
            円
          </div>
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              給付額を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/dws-projects/_projectId/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "benefitRate") 1`] = `
<div
  class="root"
  data-benefit-rate=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            給付率 *
          </label>
          <input
            type="number"
          />
          <div
            class="v-text-field__suffix"
          >
            %
          </div>
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              給付率を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/dws-projects/_projectId/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "cityCode") 1`] = `
<div
  class="root"
  data-city-code=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            助成自治体番号 *
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              助成自治体番号を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/dws-projects/_projectId/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "cityName") 1`] = `
<div
  class="root"
  data-city-name=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            助成自治体名 *
          </label>
          <input
            type="text"
          />
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              助成自治体名を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/dws-projects/_projectId/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "copayAmount") 1`] = `
<div
  class="root"
  data-copay-amount=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: 0px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            本人負担額 *
          </label>
          <input
            type="number"
          />
          <div
            class="v-text-field__suffix"
          >
            円
          </div>
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              本人負担額を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/dws-projects/_projectId/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "copayRate") 1`] = `
<div
  class="root"
  data-copay-rate=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-text-field__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            負担率 *
          </label>
          <input
            type="number"
          />
          <div
            class="v-text-field__suffix"
          >
            %
          </div>
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              本人負担率を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`pages/users/_id/dws-projects/_projectId/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "periodEnd") 1`] = `
<div
  class="root"
  data-period-end=""
  data-z-form-card-item=""
>
  <div
    class="z-date-field"
  >
    <div
      class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
        >
          <fieldset
            aria-hidden="true"
          >
            <legend
              style="width: 0px;"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="v-text-field__slot"
          >
            <input
              readonly="readonly"
              type="text"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light error--text"
            role="alert"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            >
              <div
                class="v-messages__message"
              >
                適用期間（終了）を入力してください。
              </div>
            </transition-group-stub>
          </div>
        </div>
      </div>
    </div>
    <v-dialog-stub
      closedelay="0"
      contentclass=""
      data-z-date-field-dialog=""
      opendelay="0"
      origin="center center"
      retainfocus="true"
      transition="dialog-transition"
      width="290px"
    >
      <v-date-picker-stub
        data-z-date-field-picker=""
        dayformat="[Function]"
        eventcolor="warning"
        firstdayofweek="1"
        headerdateformat="[Function]"
        locale="ja-JP"
        localefirstdayofyear="0"
        max="2028-05-17"
        min="1920-01-01"
        nexticon="$next"
        nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
        nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
        notitle="true"
        previcon="$prev"
        prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
        prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
        selecteditemstext="$vuetify.datePicker.itemsSelected"
        showcurrent="true"
        titledateformat="[Function]"
        type="date"
        value="2020-07-21"
        width="290"
        yearformat="[Function]"
      >
        <v-spacer-stub
          tag="div"
        />
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-clear=""
          text=""
        >
          クリア
        </a>
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-cancel=""
          text=""
        >
          キャンセル
        </a>
      </v-date-picker-stub>
    </v-dialog-stub>
  </div>
</div>
`;

exports[`pages/users/_id/dws-projects/_projectId/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "periodStart") 1`] = `
<div
  class="root"
  data-period-start=""
  data-z-form-card-item=""
>
  <div
    class="z-date-field"
  >
    <div
      class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--is-readonly v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined error--text"
    >
      <div
        class="v-input__control"
      >
        <div
          class="v-input__slot"
          style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
        >
          <fieldset
            aria-hidden="true"
          >
            <legend
              style="width: -24px;"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </legend>
          </fieldset>
          <div
            class="v-text-field__slot"
          >
            <label
              class="v-label v-label--active theme--light error--text"
              style="left: 0px; position: absolute;"
            >
              適用期間 *
            </label>
            <input
              readonly="readonly"
              type="text"
            />
          </div>
        </div>
        <div
          class="v-text-field__details"
        >
          <div
            class="v-messages theme--light error--text"
            role="alert"
          >
            <transition-group-stub
              class="v-messages__wrapper"
              name="message-transition"
              tag="div"
            >
              <div
                class="v-messages__message"
              >
                適用期間（開始）を入力してください。
              </div>
            </transition-group-stub>
          </div>
        </div>
      </div>
    </div>
    <v-dialog-stub
      closedelay="0"
      contentclass=""
      data-z-date-field-dialog=""
      opendelay="0"
      origin="center center"
      retainfocus="true"
      transition="dialog-transition"
      width="290px"
    >
      <v-date-picker-stub
        data-z-date-field-picker=""
        dayformat="[Function]"
        eventcolor="warning"
        firstdayofweek="1"
        headerdateformat="[Function]"
        locale="ja-JP"
        localefirstdayofyear="0"
        max="2028-05-17"
        min="1920-01-01"
        nexticon="$next"
        nextmontharialabel="$vuetify.datePicker.nextMonthAriaLabel"
        nextyeararialabel="$vuetify.datePicker.nextYearAriaLabel"
        notitle="true"
        previcon="$prev"
        prevmontharialabel="$vuetify.datePicker.prevMonthAriaLabel"
        prevyeararialabel="$vuetify.datePicker.prevYearAriaLabel"
        selecteditemstext="$vuetify.datePicker.itemsSelected"
        showcurrent="true"
        titledateformat="[Function]"
        type="date"
        value="1983-05-01"
        width="290"
        yearformat="[Function]"
      >
        <v-spacer-stub
          tag="div"
        />
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-clear=""
          text=""
        >
          クリア
        </a>
        <a
          class="v-btn-stub"
          color="primary"
          data-z-date-field-button-cancel=""
          text=""
        >
          キャンセル
        </a>
      </v-date-picker-stub>
    </v-dialog-stub>
  </div>
</div>
`;

exports[`pages/users/_id/dws-projects/_projectId/edit.vue submit should display errors when server responses 400 Bad Request (error occurred in "subsidyType") 1`] = `
<div
  class="root"
  data-subsidy-type=""
  data-z-form-card-item=""
>
  <div
    class="v-input v-input--has-state v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--is-booted v-text-field--enclosed v-text-field--outlined v-select error--text"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
        style="background-color: rgb(241, 246, 250); border-color: #f1f6fa;"
      >
        <fieldset
          aria-hidden="true"
        >
          <legend
            style="width: -24px;"
          >
            <span
              class="notranslate"
            >
              ​
            </span>
          </legend>
        </fieldset>
        <div
          class="v-select__slot"
        >
          <label
            class="v-label v-label--active theme--light error--text"
            style="left: 0px; position: absolute;"
          >
            給付方式 *
          </label>
          <div
            class="v-select__selections"
          >
            <div
              class="v-select__selection v-select__selection--comma"
            >
              定率給付
            </div>
            <input
              aria-readonly="false"
              autocomplete="off"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate mdi mdi-menu-down theme--light error--text"
              />
            </div>
          </div>
          <input
            type="hidden"
            value="1"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light error--text"
          role="alert"
        >
          <transition-group-stub
            class="v-messages__wrapper"
            name="message-transition"
            tag="div"
          >
            <div
              class="v-messages__message"
            >
              給付方式を入力してください。
            </div>
          </transition-group-stub>
        </div>
      </div>
    </div>
  </div>
</div>
`;
